--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         margin-left: 5px;
       }
 
-      #browser, #host, #active-lobby, #join-prompt {
+      #browser, #host, #active-lobby, #join-prompt, #game {
         display: none;
       }
 
@@ -142,7 +142,7 @@
           <div class="row">
             <button type="submit" class="button col-sm-2 col-sm-push-2" id="match-host-btn"
                     style="width: 10em">Host Match</button>
-            <button class="button col-sm-2 col-sm-push-2" id="match-ret-btn" style="width: 10em"
+            <button class="button col-sm-2 col-sm-push-2" id="match-ret-btn" style="width: 10em;"
                     onclick="navigate('browser');">
               Return to Lobby Browser
             </button>
@@ -197,7 +197,7 @@
         </div>
 
         <div class="navigation" style="text-align: left; margin-top: 2em;">
-          <button class="button">Start Game</button>
+          <button class="button" id="start-btn" disabled>Start Game</button>
           <button class="button" id="leave-btn">Leave Lobby</button>
         </div>
 
@@ -243,6 +243,10 @@
       </div>
     </div>
 
+    <div class="container" id="game">
+      <canvas id="webgl-canvas"></canvas>
+    </div>
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -257,14 +261,17 @@
     <script src="/js/net/config.js"></script>
     <script src="/js/net/helpers.js"></script>
     <script src="/js/net/matchmaker.js"></script>
+    <script src="/js/net/p2p.js"></script>
 
     <script src="/js/app/errors.js"></script>
     <script src="/js/app/index.js"></script>
     <script src="/js/app/host.js"></script>
 
+    <script src="/js/game/game.js"></script>
+
     <script>
       $(function() {
-        zogl.debug = true;
+        //zogl.debug = true;
         refreshBrowser();
         navigate("browser");
 
